<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background"
    tools:context=".verAgenda">

    <TextView
        android:id="@+id/tituloPag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="673dp"
        android:text="@string/tituloPag2"
        android:textAllCaps="true"
        android:textColor="#0C69B8"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="616dp"
        android:text="@string/textView1"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="299dp"
        android:layout_marginBottom="576dp"
        android:text="@string/textView2"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="539dp"
        android:text="@string/textView3"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="503dp"
        android:text="@string/textView4"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="344dp"
        android:layout_marginBottom="668dp"
        android:background="#323C83E6"
        android:clickable="true"
        android:contentDescription="@string/imageButton"
        android:tint="#0C69B8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textViewPage1"
        android:layout_width="284dp"
        android:layout_height="29dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="616dp"
        android:background="#323C83E6"
        android:text="@string/textViewPage1"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPage2"
        android:layout_width="284dp"
        android:layout_height="29dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="579dp"
        android:background="#323C83E6"
        android:text="@string/textViewPage2"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPage3"
        android:layout_width="284dp"
        android:layout_height="29dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="542dp"
        android:background="#323C83E6"
        android:text="@string/textViewPage3"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPage4"
        android:layout_width="284dp"
        android:layout_height="29dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="506dp"
        android:background="#323C83E6"
        android:text="@string/textViewPage4"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>