<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="601dp"
        android:text="@string/TextViewTitulo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0C69B8"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="479dp"
        android:ems="10"
        android:hint="@string/EditTextNombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="478dp"
        android:ems="10"
        android:hint="@string/EditTextTelefono"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="402dp"
        android:ems="10"
        android:hint="@string/EditTextCorreo"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="402dp"
        android:ems="10"
        android:hint="@string/EditTextEdad"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Guardar"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="349dp"
        android:background="#00BCD4"
        android:text="@string/Guardar"
        android:textColor="#F0FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Agenda"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_marginStart="226dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="349dp"
        android:background="#00BCD4"
        android:text="@string/Agenda"
        android:textColor="#EBFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>